[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_foe.gd" type="Script" id=1]
[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_foe_neutral.gd" type="Script" id=2]
[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_foe_investigation_1.gd" type="Script" id=3]
[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_foe_investigation_area.gd" type="Script" id=4]
[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_foe_investigation_2.gd" type="Script" id=5]
[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_foe_combat.gd" type="Script" id=6]

[node name="State_machine_npc_foe" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer_small_time" type="Timer" parent="."]

[node name="Timer_long_time" type="Timer" parent="."]
wait_time = 5.0

[node name="Neutral" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Investigation_1" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Investigation_2" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Investigation_area" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Combat" type="Spatial" parent="."]
script = ExtResource( 6 )

[connection signal="timeout" from="Timer_small_time" to="." method="_on_Timer_small_time_timeout"]
[connection signal="timeout" from="Timer_long_time" to="." method="_on_Timer_long_time_timeout"]
